appId: com.karakurai.prismalink
---
- launchApp:
    clearState: false
- tapOn:
    id: "title_start_button"
- tapOn:
    id: "mode_endless_button"
- assertVisible:
    id: "playfield_grid"
- takeScreenshot: endless_t0
