appId: com.karakurai.prismalink
---
- launchApp:
    clearState: false
- takeScreenshot: v3_title
- tapOn:
    id: "title_start_button"
- tapOn:
    id: "mode_endless_button"
- assertVisible:
    id: "playfield_grid"
- takeScreenshot: v3_endless_initial
