appId: com.karakurai.prismalink
---
- launchApp:
    clearState: false
- tapOn:
    id: "title_start_button"
- tapOn:
    id: "mode_endless_button"
- assertVisible:
    id: "endless_root"
- takeScreenshot: chain_v2_endless_initial
